--- a/.env.example
+++ b/.env.example
@@ -35,8 +35,8 @@ CLICKHOUSE_RO_PASSWORD=ch_passwd
 # ===========================
 # LLM Providers - OpenAI / Groq
 # ===========================
-OPENAI_API_KEY=<YOUR_GROQ_KEY>
-OPENAI_BASE_URL=https://api.groq.com/openai/v1
+LLM_API_KEY=<YOUR_GROQ_KEY>
+LLM_BASE_URL=https://api.groq.com/openai/v1
 
 # ===========================
 # LLM Model Names for Usage
