--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,8 +143,8 @@ services:
       # LMNR Database (for authentication)
       LMNR_DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-postgres}
       # OpenAI/LLM configuration
-      OPENAI_API_KEY: ${OPENAI_API_KEY:-sk}
-      OPENAI_BASE_URL: ${OPENAI_BASE_URL:-https://openrouter.ai/api/v1}
+      OPENAI_API_KEY: ${LLM_API_KEY:-sk}
+      OPENAI_BASE_URL: ${LLM_BASE_URL:-https://openrouter.ai/api/v1}
       OPENAI_MODEL: ${OPENAI_MODEL}
       INFECTION_MODEL: ${INFECTION_MODEL}
       ANALYSIS_MODEL: ${ANALYSIS_MODEL}
